Fix arrow clipping issue in popup component

--- a/packages/webawesome/src/components/popup/popup.css
+++ b/packages/webawesome/src/components/popup/popup.css
@@ -41,7 +41,6 @@
 .popup:not(.popup-active) {
   display: none;
 }
-
 .arrow {
   position: absolute;
   width: calc(var(--arrow-size-diagonal) * 2);
@@ -49,6 +48,7 @@
   rotate: 45deg;
   background: var(--arrow-color);
   z-index: 3;
+  clip-path: polygon(0 100%, 100% 0, 100% 100%);
 }
 
 :host([data-current-placement~='left']) .arrow {
